--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const { isAdmin, user } = Astro.locals;
 
 <Layout title="Inicio">
   <section
-    class="flex flex-wrap justify-center items-center flex-1 gap-x-10 gap-y-5 my-10 md:mt-0"
+    class=" h-full flex flex-wrap justify-center items-center flex-1 gap-x-10 gap-y-5 my-10 md:mt-0"
   >
     {
       isAdmin && (
