--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <main class="flex flex-col h-screen bg-slate text-gray-900">
+    <main class="h-screen bg-slate text-gray-900">
       <nav>
         <Navbar client:load/>
       </nav>
