--- a/src/pages/user/[id].astro
+++ b/src/pages/user/[id].astro
@@ -34,7 +34,7 @@ if(+id !== +session.user.id && session.user.role !== 'admin') {
 <Layout title="Edita tu disponibilidad y más cosas | PPAM Malabo">
     <section class="max-w-2xl mx-auto mt-10">
         <h1 class=" text-2xl md:text-4xl text-center text-pretty mb-5 font-bold uppercase">Edita la información de tu cuenta</h1>
-        <UserEditForm user={user} congregacionData={congregacionData} client:only/>
+        <UserEditForm user={user} congregacionData={congregacionData} session={session} client:only/>
     </section>
 </Layout>
 
