--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/Layout.astro"
 ---
 
 <Layout title="data">
-    <section class="max-w-7xl mx-auto mt-10">
+    <section class="max-w-7xl mx-auto mt-10 relative">
         <DataView client:load/>
     </section>
 </Layout>
