--- a/src/pages/create-user.astro
+++ b/src/pages/create-user.astro
@@ -1,7 +1,9 @@
 ---
+import { db, Congregacion } from "astro:db";
+import { UserCreateForm } from "../components/User/UserCreateForm";
 import Layout from "../layouts/Layout.astro";
 
-
+const congregacionData = await db.select().from(Congregacion);
 ---
 
 
@@ -9,6 +11,9 @@ import Layout from "../layouts/Layout.astro";
 <Layout
     title="Crear usuario | PPAM Malabo"
 >
-    <h1>Hola mundo</h1>
+    <section class="max-w-2xl mx-auto mt-10">
+        <h1 class="text-center text-4xl font-bold">Crea nuevos usuarios para el PPAM</h1>
+        <UserCreateForm congregacionData={congregacionData} client:only/>
+    </section>
 
 </Layout>
