--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -9,6 +9,6 @@ import Layout from "../layouts/Layout.astro"
 
 <Layout title="data">
     <section class="max-w-7xl mx-auto mt-10">
-        <DataView client:load/>
+        <DataView client:only/>
     </section>
 </Layout>
